Fixed navbar misalignments across pages

--- a/css/customhome.css
+++ b/css/customhome.css
@@ -1,3 +1,20 @@
+body
+{
+    width: 100%;
+    height: 100%;
+}
+
+.container {
+  witdh: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navcontainer {
+  margin-left: 2.0em;
+  margin-right: 2.0em;
+}
+
 .navbar-default .navbar-current {
   color: #bf5700;
 }
